kubernetes/apps/network/external-ingresses/app/nas-minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-minio-console
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "MinIO"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "minio"
    gethomepage.dev/description: "High Performance, Kubernetes Native Object Storage."
spec:
  ingressClassName: "internal"
  rules:
    - host: &host-console "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas-minio
                port:
                  number: 9001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host-console
      secretName: minio-console-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-minio-api
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: "internal"
  rules:
    - host: &host-api "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas-minio
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host-api
      secretName: minio-api-tls
---
apiVersion: v1
kind: Service
metadata:
  name: nas-minio
  namespace: network
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9001
      protocol: TCP
    - name: api
      port: 9000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas-minio
  namespace: network
subsets:
  - addresses:
    - ip: 10.11.0.40
    ports:
      - name: web
        port: 9001
        protocol: TCP
      - name: api
        port: 9000
        protocol: TCP
